# pbuiFrontend

./: README.md  package-lock.json  package.json  svelte.config.js
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  requests.rs
src-tauri/static/: Day 1 Trimmed.json  Day 2 Trimmed.json  Finals Trimmed.json  Semi-finals Trimmed.json
src/lib/: pbclient.ts  types.ts
src/routes/: +layout.ts  +page.svelte  +page.ts
