[package]
name = "pbui"
version = "0.2.0"
description = "Picks and Bans UI"
authors = ["Heggo"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
include_dir = "0.7"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }


[features]
custom-protocol = ["tauri/custom-protocol"]
